--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "upload:users": "node scripts/bulk-upload-users.js",
+    "update:wordpress-ids": "node scripts/update-wordpress-user-ids.js",
+    "update:job-posters": "node scripts/update-job-posters.js",
     "test:db": "node scripts/test-connection.js"
   },
   "dependencies": {
